[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.2.0"
numpy = "^1.22.2"
python = "^3.8"
replit = "^3.2.4"
urllib3 = "^1.26.12"
[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
[tool.poetry.dev-dependencies.replit-python-lsp-server]
extras = ["yapf", "rope", "pyflakes"]
version = "^1.5.9"
